delete main content

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <!-- main content -->
             <div class="bg-gradient-to-r from-green-100 to-gray-500 flex-1">
-                main content
+                <!-- main content -->
             </div>
             <!-- //END -->
         </div>
